# watara-supervision-lcd

./: .gitignore  CMakeLists.txt  README.MD  main.c
drivers/st7789/: st7789.c
drivers/vga-nextgen/: vga.c
